<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001168"
    tools:context="project01.csc214.project1.ChooseGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:name="project01.csc214.project1.FragmentScoreboard"
            android:id="@+id/scoreboard"
            android:layout_weight="1"
            tools:layout="@layout/fragment_scoreboard" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3">

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/launch_hotter_colder_button"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/hotter_colder"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/launch_hangman_button"
                android:text="@string/hangman"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:id="@+id/launch_connect4_button"
                android:text="@string/connect_4"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/launch_checkers_button"
                android:text="@string/checkers"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/choose_game_back_button"
                android:text="@string/back"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_scores_button"
                android:text="@string/reset_scores"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
