<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hangman"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#001168"
    tools:context="project01.csc214.project1.HangmanActivity">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:name="project01.csc214.project1.FragmentScoreboard"
        android:id="@+id/scoreboard"
        android:layout_weight="1"
        tools:layout="@layout/fragment_scoreboard" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="#e1e5e8"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hangman_misses"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="20sp"
            android:textColor="#000"
            android:textAlignment="center"
            android:text="@string/misses"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hangman_word"
            android:textStyle="bold"
            android:textColor="#00F"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_above="@+id/hangman_prompt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hangman_prompt"
            android:textSize="15sp"
            android:text="@string/enter_a_letter"
            android:layout_centerVertical="true"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/hangman_edittext"
            android:inputType="text"
            android:maxLength="1"
            android:layout_below="@id/hangman_prompt"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:layout_toEndOf="@id/hangman_edittext"
            android:layout_below="@id/hangman_prompt"
            android:id="@+id/hangman_ok" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hangman_quit_button"
            android:text="@string/quit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hangman_new_game_button"
            android:text="@string/start_new_game"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</LinearLayout>
